<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contnet_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.autenticacion.registro.RegistroFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgv_logo_login"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/hard_coded"
            android:src="@drawable/ic_logo_con_nombre_rosa_gris"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_textview_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="35dp"
            android:text="@string/registro_title"
            android:textColor="@color/negro"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgv_logo_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_textview_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/correo_digits"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textinputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_horizontal"
            android:layout_marginTop="@dimen/common_margin_vertical_medium"
            android:layout_marginEnd="@dimen/common_margin_horizontal"
            android:hint="@string/password_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textinputlayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/password_digits"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_vertical_medium"
            android:layout_marginEnd="@dimen/common_margin_horizontal"
            android:text="@string/registrar_text"
            android:textAllCaps="false"
            android:imeOptions="actionDone"
            app:backgroundTint="@color/rosaPastelFuerte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_textinputlayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cuenta_text"
            android:textSize="12sp"
            android:elevation="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_btn_registrar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_btn_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cuenta_iniciar"
            android:textSize="12sp"
            android:elevation="5dp"
            android:textColor="@color/rosaFuerteOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialTextView"
            app:layout_constraintTop_toTopOf="@+id/materialTextView" />


        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/multiWaveHeader"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:scaleY="-1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:mwhCloseColor="@color/colorPrimary"
            app:mwhColorAlpha="0.45"
            app:mwhGradientAngle="45"
            app:mwhProgress="1"
            app:mwhStartColor="@color/rosaFuerteOpaco"
            app:mwhVelocity="1"
            app:mwhWaveHeight="50dp"
            app:mwhWaves="MultiWave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>