<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titulo_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_resultado"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/positivo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vector_positivo"
        app:layout_constraintEnd_toStartOf="@+id/negativo_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_sheet" />

    <TextView
        android:id="@+id/positivo_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/positivo"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="@+id/positivo_imageview"
        app:layout_constraintStart_toStartOf="@+id/positivo_imageview"
        app:layout_constraintTop_toBottomOf="@+id/positivo_imageview" />

    <ImageView
        android:id="@+id/negativo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vector_negativo"
        app:layout_constraintEnd_toStartOf="@+id/invalido_imageview"
        app:layout_constraintStart_toEndOf="@id/positivo_imageview"
        app:layout_constraintTop_toTopOf="@id/positivo_imageview" />

    <TextView
        android:id="@+id/negativo_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negativo"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="@+id/negativo_imageview"
        app:layout_constraintStart_toStartOf="@+id/negativo_imageview"
        app:layout_constraintTop_toBottomOf="@+id/negativo_imageview" />

    <ImageView
        android:id="@+id/invalido_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vector_invalido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/negativo_imageview"
        app:layout_constraintTop_toTopOf="@id/positivo_imageview" />

    <TextView
        android:id="@+id/invalido_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalido"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="@+id/invalido_imageview"
        app:layout_constraintStart_toStartOf="@+id/invalido_imageview"
        app:layout_constraintTop_toBottomOf="@+id/invalido_imageview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/confirmar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positivo_textview" />



</androidx.constraintlayout.widget.ConstraintLayout>